Mise à jour du texte et ajout de références.

--- a/fonctions-fléchées.html
+++ b/fonctions-fléchées.html
@@ -3,19 +3,34 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Capsules ES6+ #1 : fonctions fléchées</title>
+  <title>Capsule ES6+ #1 : fonctions fléchées</title>
 </head>
 <body>
   <h2>
-    Capsules ES6+ #1
+    Capsule ES6+ #1
   </h2>
-  <h3>Ces exemples sont expliqués dans la <a href="https://web.microsoftstream.com/video/935fcb57-2812-4bd7-8beb-d226d30c6084" title="Capsule ES6+ #1" target="_blank">capsule vidéo</a> qu'ils accompagnent</h3>
-  <p>Consulter le code source et la console de votre navigateur.</p>
-  <ul id="listeFruits">
-    <li ref="Pamplemousse_et_pomélo">Pamplemousse</li>
-    <li ref="Grenade_(fruit)">Grenade</li>
-    <li ref="Orange_(fruit)">Orange</li>
-  </ul>
+  <h4>Les exemples dans ce fichier sont expliqués dans cette <a href="https://web.microsoftstream.com/video/935fcb57-2812-4bd7-8beb-d226d30c6084" title="Capsule ES6+ #1" target="_blank">capsule vidéo</a>.</h4>
+  <h3>Références</h3>
+  <dl>
+    <dt>MDN : Intro facile et aussi disponible en français</dt>
+    <dd><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Functions/Arrow_functions" target="_blank">https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Functions/Arrow_functions</a></dd>
+    <dt>ExploringJS : Plus complet, mais parfois difficile à suivre</dt>
+    <dd><a href="https://exploringjs.com/es6/ch_arrow-functions.html" target="_blank">https://exploringjs.com/es6/ch_arrow-functions.html</a></dd>
+  </dl>
+
+  <hr><hr><hr>
+  <p>
+    Ce qui suit fait partie des exemples discutés dans la capsule
+    (<i>Consulter le code source et la console de votre navigateur.</i>)
+  </p>
+  <hr>
+  <code>
+    <ul id="listeFruits">
+      <li ref="Pamplemousse_et_pomélo">Pamplemousse</li>
+      <li ref="Grenade_(fruit)">Grenade</li>
+      <li ref="Orange_(fruit)">Orange</li>
+    </ul>
+  </code>
   <script>
     // Exemple 1 : fonction simple qui retourne le résultat d'un calcul
     // Avec une déclaration de fonction
