--- a/code-asynchrone.html
+++ b/code-asynchrone.html
@@ -10,7 +10,11 @@
     Capsule ES6+ #3 : code asynchrone en JavaScript
   </h2>
   <h3><code><i>callback</i></code> | <code><b>Promise</b></code> | <code><u>async/await</u></code></h3>
-  <h4>Les exemples dans ce fichier sont expliqués dans cette <a href="https://web.microsoftstream.com/video/5bc31088-2f78-4246-bcd5-b5bc351a10e5" title="Capsule ES6+ #2" target="_blank">capsule vidéo</a>.</h4>
+  <h4>Les exemples dans ce fichier sont expliqués dans cette 
+    <a href="https://web.microsoftstream.com/video/c6229ca2-9a6c-48b3-9369-e4578bba4987" title="Capsule ES6+ #3" target="_blank">
+      capsule vidéo
+    </a>.
+  </h4>
   <h3>Références</h3>
   <dl>
     <dt>Guide <code>async</code>/<code>await</code> sur MDN</dt>
